--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -10,9 +10,10 @@
             %span Upload your own picture.
             .action-link
               =link_to("Edit", edit_user_path(@user, :anchor => "who_you_are")) if can?(:edit, @user)
-          =link_to(new_message_path(user), :class => "btn mt-1")  do
-            %i.icon-envelope
-            &nbsp; Send message    
+          -if user != current_user    
+            =link_to(new_user_message_path(@user), :class => "btn mt-1")  do
+              %i.icon-envelope
+              &nbsp; Send message    
   .span9
     %h1.mb-1=title(@user)
     %h3.mb-1
