Jazz up new group button on home page

--- a/app/views/neighbourhoods/show.html.haml
+++ b/app/views/neighbourhoods/show.html.haml
@@ -32,6 +32,7 @@
           =link_to_slug('Find out more', :about, :class=>"home-cta home-cta-about")
           =link_to "Join now", "#sign-up-popup", :class=>"home-cta home-cta-get-involved", :"data-toggle"=>"modal"
           =link_to "Create a group", groups_path, :class=>"home-cta home-cta-groups"
+          %span.badge#badge-groups-new NEW
 .container
   .row#needs-cycle
     .span6
