--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -443,37 +443,39 @@ br.clear {
   top: 210px;
   right: 120px;
   box-shadow:1px 1px 6px rgba(0,0,0,0.1);
-  
   -webkit-border-radius:40px;
   border-radius:40px;
 }
 .home-cta:hover {
   color: #fff;
   text-decoration: none;
-  
   box-shadow:1px 1px 4px rgba(0,0,0,0.4);
 }
 a.home-cta-get-involved {
   top: 280px;
-  right: 120px;
+  right: 140px;
   background: #73bca8;
 }
-.home-cta-groups {
-  color: #777;
-  border: 1px solid #ccc;
-  position: absolute;
+a.home-cta-groups {
   top: 350px;
-  background: #fff;
-  background: rgba(255,255,255,0.7);  
-  padding: 10px 20px;
-  
-  border-radius:40px;
-  right: 150px;
+  right: 115px;
+  background: #8bd7dd;
 }
-.home-cta-groups:hover {
-  text-decoration: none;
-  color: #000;
-  background: #fff;
+@-webkit-keyframes pulsate {
+    0% {opacity: 0.0;}
+    20% {opacity: 1.0;}
+    80% {opacity: 1.0;}
+    100% {opacity: 0.0;}
+}
+#badge-groups-new {
+  position: absolute;
+  top: 340px;
+  background: #fd818e;
+  right: 110px;
+  font-size:14px;
+  line-height:17px;
+  -webkit-animation: pulsate 2s ease-out;
+  -webkit-animation-iteration-count: infinite; 
 }
 .illustration-link {
   display: block;
