--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -2,18 +2,15 @@
   .span3
     .row
       .span3
-        -if @user.image
+        .user-thumbnail-large
           =image_for(@user, "220x")
-        -else
-          =image_for(@user, "220x")
-          .italic
-            %span Upload your own picture.
-            .action-link
-              =link_to("Edit", edit_user_path(@user, :anchor => "who_you_are")) if can?(:edit, @user)
-          -if user != current_user    
-            =link_to(new_user_message_path(@user), :class => "btn mt-1")  do
-              %i.icon-envelope
-              &nbsp; Send message    
+          -if @user.validated?
+            .validated-icon{ :rel => 'tooltip', :title =>"Address validated"}
+        %p=link_to(@user.image ? "Edit" : "Upload your own picture", edit_user_path(@user, :anchor => "who_you_are")) if can?(:edit, @user)
+        -if user != current_user    
+          =link_to(new_user_message_path(@user), :class => "btn mt-1")  do
+            %i.icon-envelope
+            &nbsp; Send message    
   .span9
     %h1.mb-1=title(@user)
     %h3.mb-1
