--- a/app/views/layouts/logged_in/_header.html.haml
+++ b/app/views/layouts/logged_in/_header.html.haml
@@ -104,6 +104,7 @@
             =link_to groups_path, :class=>"control-panel-link" do
               %h3.control-panel-title
                 My groups
+            =link_to messages_path do
               %p.control-panel-subtitle
                 =header_messages_badge(current_user.unread_message_count)
           
