Change 'Just sign me up' to a link

--- a/app/views/pre_registrations/_modals.html.haml
+++ b/app/views/pre_registrations/_modals.html.haml
@@ -16,7 +16,7 @@
       =link_to "I'd like some help", '#', :class => "btn call-to-action primary", :id => 'pre-register-need-link'
       =link_to "I'd like to offer some help", '#', :class => "btn call-to-action", :id => 'pre-register-general-offer-link'
   .modal-footer
-    =link_to "Just sign me up", '#', :class => "btn pull-right", :id => 'pre-register-signup-link'
+    =link_to "Just sign me up", '#', :class => "pull-right", :id => 'pre-register-signup-link'
     
 #pre-register-signup.modal.hide
   =render("pre_registrations/modals/signup")
