Fix styling on needs#user_index

--- a/app/views/needs/user_index.html.haml
+++ b/app/views/needs/user_index.html.haml
@@ -25,7 +25,7 @@
     -else
       %p
         You haven't asked for any help yet.
-        .row
-          .span6.offset2
-            =link_to "Add a request for help", new_need_path, :class=>"btn call-to-action primary"      
+      .row
+        .span6
+          =link_to "Add a request for help", new_need_path, :class=>"btn call-to-action primary"      
 
