--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1363,23 +1363,34 @@ a.intro-nav-link-security {
   font-size: 13px;
   right: 0px;
   font-weight: bold;
-  
   z-index: 30;
-
-
-     -moz-border-radius-bottomleft:5px;
-     -moz-border-radius-bottomright:5px;
-     -webkit-border-bottom-right-radius:5px;
-     -webkit-border-bottom-left-radius:5px;
-     border-bottom-right-radius:5px;
-     border-bottom-left-radius:5px;
-     
-     -webkit-box-shadow:1px 1px 2px rgba(0,0,0,0.2);     
-     box-shadow:1px 1px 2px rgba(0,0,0,0.2);
-
+  -moz-border-radius-bottomleft:5px;
+  -moz-border-radius-bottomright:5px;
+  -webkit-border-bottom-right-radius:5px;
+  -webkit-border-bottom-left-radius:5px;
+  border-bottom-right-radius:5px;
+  border-bottom-left-radius:5px;
+  -webkit-box-shadow:1px 1px 2px rgba(0,0,0,0.2);     
+  box-shadow:1px 1px 2px rgba(0,0,0,0.2);
+}
+.safety-help-link-logged-out {
+  right: 79px;
 }
 .help-link:hover {
   color: #fff;
+}
+.login-help-link {
+  right
+}
+.login-help-link {
+  right: 0px;
+  background: #b35860;
+}
+.login-help-link span.badge {
+  background-color: white;
+  color: #b35860;
+  padding-left: 6px;
+  padding-right: 6px;  
 }
 .cta-intro {
   float: right;
