--- a/app/views/groups/_header.html.haml
+++ b/app/views/groups/_header.html.haml
@@ -1,29 +1,29 @@
-.container
-.all-groups-strip
-  .container
-    .row
-      .span12.groups-header
-        =link_to(groups_path) do
-          =image_tag('groups-logo.png', :class=>'groups-logo-header')
-          %h4.groups-title
-            Groups
-            %small
-              =link_to 'View all groups', all_groups_path
--if @group
-  .container
-    .row.mb-2.mt-3
-      .span7
-        %h1.page-title.mb-3.mt-0
-          =@group.name
-        =simple_format(@group.description)
-        -if !@group.has_member?(current_user)
-          -if @group_invitation && @group_invitation.user.nil?
-            =link_to("Join this group", new_group_invitation_group_registration_path(@group_invitation), :class => 'btn btn-large btn-primary mt-2')
-          -else
-            =link_to("Join this group", join_group_path(@group), :class => 'btn btn-large btn-primary mt-2')
-      .span5
-        =image_for(@group, '370x250#')
-    -if @group.has_member?(current_user)
-      .row
-        .span12
-          =render('groups/nav')
+.row.mb-2
+  .span7
+    %h1.page-title.mb-3.mt-0
+      =@group.name
+    =simple_format(@group.description)
+    -if !@group.has_member?(current_user)
+      -if @group_invitation && @group_invitation.user.nil?
+        =link_to("Join this group", new_group_invitation_group_registration_path(@group_invitation), :class => 'btn btn-large btn-primary mt-2')
+      -else
+        =link_to("Join this group", join_group_path(@group), :class => 'btn btn-large btn-primary mt-2')
+  .span5
+    =image_for(@group, '370x250#')
+-if @group.has_member?(current_user)
+  .row
+    .span12
+      %ul.nav.nav-tabs.group-nav-tabs.mb-3
+        %li{:class => "#{'active' if action_name.show?}"}
+          =link_to(@group) do
+            %i.icon-comment
+            Posts
+        %li{:class => "#{'active' if action_name.members?}"}
+          =link_to(members_group_path(@group)) do
+            %i.icon-group
+            ="Members (#{@group.members.count})"
+        %li{:class => "#{'active' if controller_name.photos?}"}
+          =link_to(group_photos_path(@group)) do
+            %i.icon-camera
+            Photos
+            =" (#{@group.photos.count})" if @group.photos.count > 0
