--- a/app/views/groups/index.html.haml
+++ b/app/views/groups/index.html.haml
@@ -1,44 +1,43 @@
-.container
-=render('groups/header')
-.container
-  .row.mb-2.mt-3
-    .span12
-      %h1.page-title.mb-3.mt-0
-        My groups
-      .row
-        -@groups.each do |group|
-          =link_to(group, :class => "span3 group-tile") do
-            .inner.clearfix
-              .group-tile-image-wrap
-                =image_for(group, '190x130#')
-              %h4=group.name
-              
-        =link_to(new_group_path, :class=>"span3 group-tile group-tile-new") do
+-if @group
+  =render('groups/header')
+.row.mb-2
+  .span12
+    %h1.page-title.mb-3.mt-0
+      My groups
+    .row
+      -@groups.each do |group|
+        =link_to(group, :class => "span3 group-tile") do
           .inner.clearfix
             .group-tile-image-wrap
-              %i.icon-plus
-            %h4  
-              Add a new group
-  -if current_user.group_invitations.present?
-    .row.mb-2.mt-3
-      .span12
-        %h1.page-title.mb-3.mt-0
-          Invitations
-        .row
-          -current_user.group_invitations.includes(:group).each do |invitation|
-            =link_to(invitation.group, :class => "span3 group-tile") do
-              .inner.clearfix
-                .group-tile-image-wrap
-                  =image_for(invitation.group, '190x130#')
-                %h4=invitation.group
+              =image_for(group, '190x130#')
+            %h4=group.name
+            
+      =link_to(new_group_path, :class=>"span3 group-tile group-tile-new") do
+        .inner.clearfix
+          .group-tile-image-wrap
+            %i.icon-plus
+          %h4  
+            Add a new group
+-if current_user.group_invitations.present?
   .row.mb-2.mt-3
     .span12
       %h1.page-title.mb-3.mt-0
-        Popular groups nearby        
+        Invitations
       .row
-        -@popular_groups.each do |group|
-          =link_to(group, :class => "span3 group-tile") do
+        -current_user.group_invitations.includes(:group).each do |invitation|
+          =link_to(invitation.group, :class => "span3 group-tile") do
             .inner.clearfix
               .group-tile-image-wrap
-                =image_for(group, '190x130#')
-              %h4=group.name
+                =image_for(invitation.group, '190x130#')
+              %h4=invitation.group
+.row.mb-2.mt-3
+  .span12
+    %h1.page-title.mb-3.mt-0
+      Popular groups nearby        
+    .row
+      -@popular_groups.each do |group|
+        =link_to(group, :class => "span3 group-tile") do
+          .inner.clearfix
+            .group-tile-image-wrap
+              =image_for(group, '190x130#')
+            %h4=group.name
