Reinstate email confirmation on registrations#new

--- a/app/views/registrations/steps/_who_you_are.html.haml
+++ b/app/views/registrations/steps/_who_you_are.html.haml
@@ -17,7 +17,8 @@
       %br
       =link_to "Change your mind....", "#why-age", :'data-toggle' => "modal"
   =form.input :gender, :as => :radio, :collection => [["Male","male"], ["Female","female"]]
-  =form.input :email, :label => "Email address", :required => false, :input_html => {:disabled => true}
+  =form.input :email, :label => "Email address", :required => false, :help => "Enter the email address you would like to use for logging in again. We promise not share this with others.", :input_html => {:placeholder => "e.g. john@email.com"}
+  =form.input :email_confirmation, :label => "Confirm email address", :required => false, :help => "Type your email address again so that we can check there are no typos", :input_html => {:placeholder => "e.g. john@email.com"}
   -if @user.current_step == 'who_you_are'
     =form.input :password, :required => false, :help => "Choose a password that would you like to use to login"
     =form.input :password_confirmation, :label => "Confirm password", :required => false, :help => "Type the password again so that we can make sure you haven't made a mistake"
