--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1230,7 +1230,8 @@ body.controller_users.action_show .user-thumbnail-large .validated-icon {
   z-index: 100;
   height: 120px;
 }
-body.with-control-panel .header-intro {
+body.with-control-panel .header-intro,
+body.controller_home.logged_out .header-intro {
   margin-bottom: 0;
 }
 .header-intro-inner {
