--- a/app/views/layouts/logged_in/_header.html.haml
+++ b/app/views/layouts/logged_in/_header.html.haml
@@ -32,9 +32,10 @@
           %li=link_to('About us', neighbourhood ? neighbourhood_about_path(neighbourhood) : Page.find_by_slug(:about), :class=>"intro-nav-link-about intro-nav-link")
           %li.dropdown#get-involved-nav
             =link_to_slug('Get involved', :get_involved, :class=>"intro-nav-link intro-nav-link-get-involved")
-            %ul.dropdown-menu
-              -Page.find_by_slug(:get_involved).children.each do |child|
-                %li=link_to_self(child)
+            -if get_involved_page = Page.find_by_slug(:get_involved)
+              %ul.dropdown-menu
+                -get_involved_page.children.each do |child|
+                  %li=link_to_self(child)
           %li=link_to_slug('News', :news, :class=>"intro-nav-link-latest intro-nav-link")
           %li=link_to("Help", neighbourhood ? neighbourhood_help_path(@neighbourhood) : Page.find_by_slug(:help), :class=> "intro-nav-link intro-nav-link-help")
     =link_to_slug('Stay safe', :safety_tips, :class=>"help-link", :icon => 'question-sign')
