--- a/app/views/layouts/logged_out/_header.html.haml
+++ b/app/views/layouts/logged_out/_header.html.haml
@@ -12,9 +12,10 @@
           %li=link_to('About us', @neighbourhood ? neighbourhood_about_path(@neighbourhood) : Page.find_by_slug(:about), :class=>"intro-nav-link intro-nav-link-about")
           %li.dropdown#get-involved-nav
             =link_to_slug('Get involved', :get_involved, :class=>"intro-nav-link intro-nav-link-get-involved")
-            %ul.dropdown-menu
-              -Page.find_by_slug(:get_involved).children.each do |child|
-                %li=link_to_self(child)
+            -if get_involved_page = Page.find_by_slug(:get_involved)
+              %ul.dropdown-menu
+                -get_involved_page.children.each do |child|
+                  %li=link_to_self(child)
           %li=link_to_slug('News', :news, :class=>"intro-nav-link intro-nav-link-latest")
           %li=link_to("Help", @neighbourhood ? neighbourhood_help_path(@neighbourhood) : Page.find_by_slug(:help), :class=> "intro-nav-link intro-nav-link-help")
 
