Change 'community champion' to 'neighbourhood champion'

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1185,7 +1185,7 @@ body.controller_users.action_show .user-thumbnail-large .validated-icon {
   margin-top: 10px;
 }
 
-/*************** community champion  ********************/
+/*************** neighbourhood champion  ********************/
 .post-private-checkbox .controls .checkbox {
   font-size: 12px;
   line-height: 14px;
