--- a/app/views/user_mailer/community_champion_request.text.erb
+++ b/app/views/user_mailer/community_champion_request.text.erb
@@ -1,6 +1,6 @@
 Hi site admin,
 
-<%=@user%> has requested to be a community champion.
+<%=@user%> has requested to be a neighbourhood champion.
 
 View all champion requests here: <%=users_url(:anchor => 'champion_requests')%>
 
