--- a/app/views/champions/show.html.haml
+++ b/app/views/champions/show.html.haml
@@ -12,7 +12,7 @@
   .span9
     %h1.mb-1
       =title(@champion.full_name)
-      \- your community champion
+      \- your neighbourhood champion
 
     -if @champion.bio.present?
       %h4 Bio    
