--- a/app/views/modals/_community_champion.html.haml
+++ b/app/views/modals/_community_champion.html.haml
@@ -1,7 +1,7 @@
 =semantic_form_for user, :url => assign_champion_user_url do |form|
   .modal-header
     %button.close{:type => "button", :'data-dismiss' => "modal" } &times;
-    %h3="Choose a community champion for #{user}"
+    %h3="Choose a neighbourhood champion for #{user}"
   .modal-body
     =form.input :validated, :as => :hidden, :input_html => {:value => 1} 
     =form.input :community_champion_id, :as => :select,  :collection => User.community_champions
