--- a/app/views/user_mailer/community_champion_request.html.haml
+++ b/app/views/user_mailer/community_champion_request.html.haml
@@ -4,7 +4,7 @@
     %p Hi site admin,
     %p
       =link_to(@user, user_url(@user))
-      has requested to be a community champion.
+      has requested to be a neighbourhood champion.
     %p
       =link_to("View all champion requests", users_url(:anchor => 'champion_requests'))
     %p
