--- a/app/views/pre_registrations/modals/_signup.html.haml
+++ b/app/views/pre_registrations/modals/_signup.html.haml
@@ -8,7 +8,7 @@
       %button{:type=>"button", :class=>"close", :"data-dismiss"=>"modal"}
         ×
       %h3
-        Get involved
+        Join now
     .modal-body
       .preregister-form
         %p.popup-intro
