Fix 'Join now' buttons on about page, change to 'Get involved' links when logged in

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -35,3 +35,4 @@
         =render('modals/new_need_not_validated')
       .footer-wrapper
         =render("layouts/footer")
+      =render ('pre_registrations/modals')
