--- a/app/views/neighbourhoods/about.html.haml
+++ b/app/views/neighbourhoods/about.html.haml
@@ -71,8 +71,11 @@
             =edit_snippet_link(:about_how_it_works_title_1) 
         %p   
           =neighbourhood_snippet_text(:about_how_it_works_para_1,"You decide you want to be part of a movement to help people in your neighbourhood get to know each other better, get to help each other more and get to strengthen your street’s sense of community. You sign up to Neighbours Can Help (use the Register or Join now button) and tell all your neighbours, friends and family about it.")
-          =edit_snippet_link(:about_how_it_works_para_1) 
-        =link_to "Join now", "#pre-register", :id=>"cta-1", :class=>"cta-intro cta-small", :"data-toggle"=>"modal"
+          =edit_snippet_link(:about_how_it_works_para_1)
+        -if current_user
+          =link_to_slug "Get involved", :get_involved, :id=>"cta-1", :class=>"cta-intro cta-small"
+        -else
+          =link_to "Join now", "#pre-register", :id=>"cta-1", :class=>"cta-intro cta-small", :"data-toggle"=>"modal"
       .span4
         %p
           %strong
@@ -97,7 +100,10 @@
         %p
           =neighbourhood_snippet_text(:about_live_para_2, "So that’s where your support for this as an idea, by letting all your friends, family and neighbours know will really help to get things started. So, if you think it’s a good idea, please sign up.")
           =edit_snippet_link(:about_live_para_2) 
-        =link_to "Join now", "#pre-register", :id=>"cta-3", :class=>"cta-intro cta-small", :"data-toggle"=>"modal"
+        -if current_user
+          =link_to_slug "Get involved", :get_involved, :id=>"cta-3", :class=>"cta-intro cta-small"
+        -else
+          =link_to "Join now", "#pre-register", :id=>"cta-3", :class=>"cta-intro cta-small", :"data-toggle"=>"modal"
       .span12.pencil-line    
           
 
@@ -121,7 +127,10 @@
         %p                
           =neighbourhood_snippet_text(:about_long_term_para_2, "Neighbours Can help is actually a Sheffield organisation and we’d LOVE to get it working properly in our home town!! We will be making areas of Sheffield live next – all depending upon where and how much support we get.....even if we get enough people in just one street, our clever computer system will allow us to launch in that street !!.....so sign up here now.....")
           =edit_snippet_link(:about_long_term_para_2)
-        =link_to "Join now", "#pre-register", :id=>"cta-2", :class=>"cta-intro cta-small", :"data-toggle"=>"modal"
+        -if current_user
+          =link_to_slug "Get involved", :get_involved, :id=>"cta-2", :class=>"cta-intro cta-small"
+        -else  
+          =link_to "Join now", "#pre-register", :id=>"cta-2", :class=>"cta-intro cta-small", :"data-toggle"=>"modal"
       .span12.pencil-line
       .span8.offset2.center.bottom-paragraph
         =simple_format(neighbourhood_snippet_text(:about_footer, "And eventually, we would like to see this website used to meet the many hidden needs in every street within the UK.\n\n So if you agree with this long term ambition, please sign up and encourage others to do the same....and remember there's no long term commitment ; it's not neighbours MUST help or neighbours OUGHT TO help - it's neighbours CAN help.....and only if and when they want to. We just happen to believe they will.....\n\nThank you !\n\nJohn, David, Rose and Ange\n\nThe Neighbours Can Help Team"))
@@ -132,7 +141,10 @@
       .span6.offset3
         .well
           %h2 Be part of it
-          =link_to "Join now", "#pre-register", :class=>"cta-intro", :"data-toggle"=>"modal"
+          -if current_user
+            =link_to_slug "Get involved", :get_involved, :class=>"cta-intro"
+          -else
+            =link_to "Join now", "#pre-register", :class=>"cta-intro", :"data-toggle"=>"modal"
           .clearfix
         =link_to "Top", "#top", :class=>"to-top-link"
 
