Show CMS links on admin#index

--- a/app/views/admin/index.html.haml
+++ b/app/views/admin/index.html.haml
@@ -63,6 +63,14 @@
     .span4
       .well
         %h2
+          %i.icon-file
+          CMS
+        %ul.unstyled
+          %li=link_to "View all pages", pages_path
+          %li=link_to "New page", new_page_path
+    .span4
+      .well
+        %h2
           %i.icon-zoom-in
           Neighbourhoods
         %ul.unstyled
