Add 'Groups' link back to nav

--- a/app/views/layouts/logged_in/_header.html.haml
+++ b/app/views/layouts/logged_in/_header.html.haml
@@ -30,7 +30,8 @@
         %ul.nav.nav-intro.unstyled                
           %li=link_to "Home", root_path, :class=>"intro-nav-link-home intro-nav-link"     
           -neighbourhood = current_user.neighbourhood
-          %li=link_to('About us', neighbourhood ? neighbourhood_about_path(neighbourhood) : Page.find_by_slug(:about), :class=>"intro-nav-link-about intro-nav-link")
+          %li=link_to('About', neighbourhood ? neighbourhood_about_path(neighbourhood) : Page.find_by_slug(:about), :class=>"intro-nav-link-about intro-nav-link")
+          %li=link_to('Groups', groups_path, :class=>"intro-nav-link-groups intro-nav-link")
           %li.dropdown#get-involved-nav
             =link_to_slug('Get involved', :get_involved, :class=>"intro-nav-link intro-nav-link-get-involved")
             -if get_involved_page = Page.find_by_slug(:get_involved)
